Refactor build to utilise sbt-kubuszok more
Refactors build.sbt from 1227 to ~850 lines using sbt-kubuszok patterns
(someVariations, MatrixAction, Aliases with published/testOnly/compileOnly,
DevProperties).

Build structure:
- All modules converted to projectMatrix (no more plain project except root)
- Shared commonSettings def provides compiler flags, fork/javaOptions,
  scaladesktop source dirs, munit, resolvers via MatrixAction blocks
- Platform-specific overrides (native providers, JVM classpath, native lib
  bundling) passed through MatrixAction instead of .jvmPlatform/.nativePlatform
  (which don't compose with someVariations)
- Extensions sorted alphabetically in declarations, Aliases, and root aggregation
- Reusable MatrixAction vals: jvmPlatformApiClasspath, nativeProviderSettings
- Test asset generation extracted to project/TestAssets.scala
- dev.properties added for IDE platform selection

SgePlugin cleanup:
- Removed internal-only helpers (jvmSettings, jsSettings, nativeSettings) from
  the published plugin — inlined into build.sbt commonSettings where they belong
- Downstream users get platform config via auto-triggered plugins
  (SgeDesktopJvmPlatform, SgeBrowserPlatform, SgeDesktopNativePlatform)

CI updates:
- Test aliases replaced manual addCommandAlias with auto-generated test-jvm-3,
  test-js-3, test-native-3, ci-jvm-3 from Aliases
- Replaced setup-java + setup-sbt with coursier/setup-action where architecture
  param isn't needed
- All checkouts use submodules: false
- Added release.yml workflow for Sonatype snapshot/release publishing

Other fixes:
- Fixed sge-tools unused imports/variables (6 issues caught by -Werror)
- Added -Wconf:cat=deprecation:s for sge-jvm-platform-android (intentional
  use of deprecated Android APIs for backward compatibility)
- Fixed projectMatrix baseDirectory issues (source dirs, test working dirs,
  APK paths use ThisBuild/baseDirectory instead of matrix-local baseDirectory)

Bumps sbt-kubuszok from 0.1.0 to 0.2.0.